/*
 * $Id: ChangeLog,v 1.2520 2004/03/08 01:25:50 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-07 20:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed handling of [] context in strotrim() of first character after successful tranlation (iContext == 2 )

2004-03-07 17:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    - Restored recently removed logic in CommandStuff() under case '\17':

2004-03-07 16:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    + Added logic to mark USED and NON Repeatble Marker by changing it's type to 'X'
    + Added logic to REJECT any further matching of already USED and NON Repeatble Marker.
    - Removed redundant logic in CommandStuff() under case '\17':
    + Added HACK to getExpReal() to accept AS <type> postfix when matching List Markers.
    + Added HACK to getExpReal() to accept AS ARRAY OF <type> postfix when matching List Markers.

2004-03-08 04:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/hvm.c
    + there are 10 instances of hb_itemReleaseString() in hvm.c. 8 of which
      check bStatic status before calling the function leaving only 2 which
      are ambiguous. On that ground, I create a static function
      hb_itemReleaseStringX() within hvm.c to avoid redundant checking of
      bStatic flag. I've tested this for one week before committing and found
      no problem. This may not add a significant speed boost but double
      checking is not an efficient job, IMO.

    + add HB_NO_TRACE define. When defined, all logic test to hb_bTracePrgCalls
      will be ignored.

  * source/rdd/dbcmd.c
    - remove redundant hb_itemClear()

  * source/rtl/hbcomprs.c
    % pass proper parameter to error handler in prg level functions.

  * source/clipsamp/gauge.c
    % minor optimization
